[package]
name = "rsgss-graphics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit     		  = { version = "0.28.3", optional = true }
raw-window-handle = "0.5.2"
wgpu      		  = "0.15.1"
image             = { version = "0.24", features = ["jpeg", "png"] }
thiserror 		  = "1.0.40"
bytemuck          = { version = "1.13.1", features = ["derive"] }

[features]
default = ["winit"]

winit = ["dep:winit"]