[package]
name    = "rsgss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log               = "0.4.17"
pretty_env_logger = "0.4.0"

figment = { version = "0.10.8", features = ["env", "toml", "json"] }
serde   = { version = "1", features = ["derive"] }

rfd = "0.11.3"

tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }

rsgss-graphics = { path = "../graphics" }

[build-dependencies]
embed-manifest = "1.3.1"

[[bin]]
name = "rsgss"
path = "src/main.rs"